5 June 2004 Sylvain Pion
- test-suite : specificaly test for constant propagation.

22 May 2004 Sylvain Pion
- Filtered_exact : remove useles copy ctor (valgrind bogs on it).

9 May 2004 Sylvain Pion
- Remove CGAL_IA_NO_INLINE (let the compiler do its job).

8 May 2004 Sylvain Pion
- Interval_nt : Partially undo the change done on 11 May 2003 : replace the
  internal std::pair<double, double> by 2 doubles.
  It brings back some performance.

8 May 2004 Sylvain Pion
- SSE2 handling (bugzilla #184).
  Support for GCC (>= 3.3) options : -mfpmath=sse
  which is faster than the traditional FPU, especially since we
  do not have to workaround some "features" of the x87.
  -mfpmath=387,sse is not yet supported.

8 May 2004 Sylvain Pion
- Move FPU_empiric_test() and force_ieee_double_precision() from
  src/Interval_arithmetic.C to tst0.C and FPU.h respectively.
- FPU.h : remove G++ 3.0.0 workaround, but put a #error instead.

7 May 2004 Andreas Fabri
- Replaced protected: with public: in Static_filters/*.h

4 May 2004  Menelaos Karavelas
- previous date because of time difference.
- continuation of changes made by Sylvain in FPU.h for supporting the
  Intel compiler on Linux.
  The problem with the Intel compiler was in IA_force_to_double.
  Made the following changes:
  1. removed all irrelevant checks for the Intel compiler
  2. added comment in IA_force_to_double about the Intel compiler

5 May 2004 Sylvain Pion
- ICC is defining __GNUG__ by default on Linux.
  Protect against it with !defined __INTEL_COMPILER.

18 Apr 2004 Sylvain Pion
- Rename Huge_val to infinity, and move it to FPU.h.

18 Apr 2004 Sylvain Pion
- Remove explicit compilers tests :
  - use CGAL_CFG_DENORMALS_COMPILE_BUG instead.
  - is_valid() : no need to optimize unportably.

13 Apr 2004 Menelaos Karavelas
- Made changes suggested by Sylvain for icc; namely, replaced occurences
  of HUGE_VAL by std::numeric_limits<double>::infinity()

9 Apr 2004 Sylvain Pion
- PGCC workarounds.
